# gnatss

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Optimized_Kalman.ipynb  README.md  copy1-decode_INSVPAA.ipynb  decode_INSVPAA.ipynb  kalman_compare.ipynb  kalman_new.ipynb  kalman_test.ipynb  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  test.ipynb  test1.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yaml  test.yaml
docs/: _config.yml  _toc.yml  api.rst  config_yaml.md  configs.rst  dataspec.rst  gnssa.md  gnssa_derivation.md  gnssa_preprocessing.md  input.md  install.md  intro.md  notebooks.ipynb  parsed_processing.md  position_inversion.md  travel_time_delays.md
seagap/configs/: io.py  main.py  solver.py
seagap/utilities/: io.py
src/gnatss/: __init__.py  __main__.py  cli.py  constants.py  harmonic_mean.py  legacy_main.py  loaders.py  main.py  ops.py  temp.py
src/gnatss/configs/: io.py  main.py  parsed.py  posfilter.py  solver.py  transponders.py
src/gnatss/constants/: __init__.py  garpos.py
src/gnatss/dataspec/: __init__.py  base.py  utils.py  v1.py
src/gnatss/ops/: __init__.py  data.py  harmonic_mean.py  io.py  kalman.py  posfilter.py  qc.py  solve.py  utils.py  validate.py
src/gnatss/parsed/: __init__.py  parsed.py  run.py
src/gnatss/posfilter/: __init__.py  posfilter.py  run.py  utilities.py
src/gnatss/solver/: methods.py  run.py  solve.py  utilities.py
src/gnatss/utilities/: geo.py  io.py  rot_example.py  testing.py  time.py  wg_kalman_ecef_GNATSS.py
src/seagap/: __init__.py  __main__.py  cli.py  constants.py  harmonic_mean.py  rotposatt.py
src/seagap/configs/: io.py  main.py  solver.py
src/seagap/utilities/: geo.py
ssec_project/: hello.py
ssec_project/tests/: test_hello.py
tests/: __init__.py  conftest.py  install_test_directory.py  ops_data.py  test_cli.py  test_harmonic_mean.py  test_loaders.py  test_main.py  test_ops.py
tests/configs/: test_configs_main.py  test_configs_parsed.py  test_configs_posfilter.py  test_main.py  test_posfilter.py
tests/data/: .gitignore  config.yaml  config_csrs.yaml  config_dfop.yaml  config_dfop_bugged_files.yaml  config_parsed.yaml  config_parsed_test_files.yaml  config_pride.yaml  sound_profile_hm.csv  test_obs.csv
tests/data/2022/NCL1/: quality_control.csv
tests/data/2022/NCL1/208/GPS_PPP/: GPS_POS_FREED
tests/data/2022/NCL1/208/WG_20220727/: RPH_TWTT  pxp_tt  pxp_tt_j2k
tests/data/2022/NCL1/208/posfilter/: POS_FREED_TRANS_TWTT  RPH
tests/data/2022/NCL1/209/WG_20220728/: RPH_TWTT  pxp_tt  pxp_tt_j2k
tests/data/2022/NCL1/210/WG_20220729/: RPH_TWTT  pxp_tt  pxp_tt_j2k
tests/data/2022/NCL1/ctd/: CTD_NCL1_Ch_Mi  CTD_NCL_Ch_Mi
tests/data/2022/NCL2/ctd/: CTD_NCL_Ch_Mi
tests/fortran/: plh2xyz  plh2xyz-arm64  xyz2enu.f
tests/ops/: test_data.py  test_qc.py  test_solve.py  test_validate.py
tests/parsed/: test_parsed.py
tests/posfilter/: test_posfilter.py
tests/utilities/: test_geo.py  test_io.py  test_testing.py  test_time.py
