[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gnatss"
dynamic = ["version"]
description = "Community Seafloor Global Navigation Satellite Systems - Acoustic (GNSS-A) Transponder Surveying Software"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astropy>=5.2.2,<6",
    "fsspec>=2023.3.0,<2024",
    "matplotlib>=3.8.0,<4",
    "numba>=0.56.4,<1",
    "numpy>=1.23.5,<2",
    "nptyping>=2.5.0,<3",
    "cftime>=1.6.2,<2",
    "pandas>=2.0.3,<3",
    "pydantic>=2.1.1,<3",
    "pydantic-settings>=2.0.3,<3",
    "pyyaml>=6.0.1,<7",
    "pymap3d>=3.0.1,<4",
    "pluggy>=1.2.0,<2",
    "pyproj>=3.5.0,<4",
    "scipy>=1.10.1,<2",
    "typer>=0.7.0,<1",
    "xarray>=2023.8.0,<2024",
]

[project.optional-dependencies]
docs = [
    "jupyter-book",
    "numpydoc",
    "sphinx-automodapi",
    "sphinx-panels",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid",
    "autodoc_pydantic>=2.0.1,<3.0"
]
lint = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-mutable",
    "flake8-print",
    "isort",
    "mypy",
    "pre-commit",
    "pylint",
]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mock",
    "pytest-xdist",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/uw-ssec/offshore-geodesy"

[project.scripts]
gnatss = "gnatss.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gnatss/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
