[metadata]
name = seagap
description = Community Seafloor Global Navigation Satellite Systems - Acoustic (GNSS-A) Positioning Software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uw-ssec/offshore-geodesy
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    fsspec
    numpy
    numba
    pandas
    pydantic
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs =
    sphinx_rtd_theme
    sphinx-automodapi
    sphinx-panels
    sphinxcontrib-mermaid
    jupyter-book
    numpydoc
all =
    %(test)s
    %(lint)s
    %(docs)s
